<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layouttitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titlesudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="10"
            android:shadowDy="-2"
            android:shadowRadius="6"
            android:text="Sudoku"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="50sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutbutton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/b0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSession"
            android:tag="0"
            android:text="Debug"
            android:visibility="gone" />

        <Button
            android:id="@+id/b1"
            style="@style/bouton_main.startDiffculty"
            android:tag="1"
            android:text="@string/dif_easy"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/b2"
            style="@style/bouton_main.startDiffculty"
            android:layout_marginTop="8dp"
            android:tag="2"
            android:text="@string/dif_med"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/b3"
            style="@style/bouton_main.startDiffculty"
            android:layout_marginTop="8dp"
            android:tag="3"
            android:text="@string/dif_hard"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintLeft_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        ads:layout_constraintRight_toRightOf="parent"></com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
